--- a/doc/Tutorial.ipynb
+++ b/doc/Tutorial.ipynb
@@ -101,7 +101,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The rnapolii example scripts are contained in the directory `modeling`."
+    "The rnapoliii example scripts are contained in the directory `modeling`."
    ]
   },
   {
@@ -198,7 +198,7 @@
     "\n",
     "### Running the script <a name=\"3_Running_the_script\"></a>\n",
     "\n",
-    "The first three modeling stages are all contained within one script, `modeling.py`. You can get started by simply changing into the `rnapolii/modeling` directory and then running the script with Python:\n",
+    "The first three modeling stages are all contained within one script, `modeling.py`. You can get started by simply changing into the `modeling` directory and then running the script with Python:\n",
     "\n",
     "```\n",
     "python modeling.py\n",
@@ -274,7 +274,7 @@
     "\n",
     "\n",
     "In this stage, we will initially define a representation of the system. Afterwards, we will convert the data into spatial restraints.  This is performed using the script `modeling/modeling.py` and uses the\n",
-    "topology file, `topology_poliii.txt` and `topology_poliii.txt`, to define the system components and their representation\n",
+    "topology file, `topology_poliii.txt` and `topology_poliii_cryoem.txt`, to define the system components and their representation\n",
     "parameters.\n",
     "\n",
     "### Setting up Model Representation and Degrees of Freedom in IMP <a name=\"Setting_up_3\"></a>\n",
@@ -752,7 +752,6 @@
    ],
    "source": [
     "# Each state can be specified by a topology file.\n",
-    "bs.add_state(topology)\n",
     "bs.add_state(topology)"
    ]
   },
