Add models (from analysis tutorial)

--- a/rnapoliii/deposition/Deposition.ipynb
+++ b/rnapoliii/deposition/Deposition.ipynb
@@ -585,6 +585,78 @@
       ]
     },
     {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Get last protocol in the file\n",
+        "protocol = s.orphan_protocols[-1]\n",
+        "# State that we filtered the 200000 frames down to one cluster of\n",
+        "# 100 models:\n",
+        "import ihm.analysis\n",
+        "analysis = ihm.analysis.Analysis()\n",
+        "protocol.analyses.append(analysis)\n",
+        "analysis.steps.append(ihm.analysis.ClusterStep(\n",
+        "                      feature='RMSD', num_models_begin=200000,\n",
+        "                      num_models_end=100))\n",
+        "\n",
+        "mg = ihm.model.ModelGroup(name=\"Cluster 0\")\n",
+        "\n",
+        "# Make DCD of all models in cluster\n",
+        "dcd_filename = '../analysis/cluster.0/allmodels.dcd'\n",
+        "num_models = 0\n",
+        "with open(dcd_filename, 'wb') as dcd_fh:\n",
+        "    dcd = ihm.model.DCDWriter(dcd_fh)\n",
+        "    for sample in ('A', 'B'):\n",
+        "        file_for_id = {}\n",
+        "        with open('../analysis/Identities_%s.txt' % sample) as fh:\n",
+        "            for line in fh:\n",
+        "                filename, model_id = line.rstrip('\\r\\n').split()\n",
+        "                file_for_id[model_id] = filename\n",
+        "        with open('../analysis/cluster.0.sample_%s.txt' % sample) as fh:\n",
+        "            for line in fh:\n",
+        "                model_id = line.rstrip('\\r\\n')\n",
+        "                if num_models % 10 == 0:\n",
+        "                    print(\"Convert RMF %d to DCD\" % num_models)\n",
+        "                num_models += 1\n",
+        "                rh = RMF.open_rmf_file_read_only(\n",
+        "                    '../analysis/%s' % file_for_id[model_id])\n",
+        "                IMP.rmf.link_hierarchies(rh, [root_hier])\n",
+        "                IMP.rmf.load_frame(rh, RMF.FrameID(0))\n",
+        "                del rh\n",
+        "                m = po.add_model(mg)\n",
+        "                dcd.add_model(m)\n",
+        "                del mg[-1]\n",
+        "\n",
+        "dcd_location = ihm.location.OutputFileLocation(\n",
+        "    path=dcd_filename,\n",
+        "    details=\"Coordinates of all structures in the largest cluster\")\n",
+        "\n",
+        "e = ihm.model.Ensemble(model_group=mg, num_models=num_models,\n",
+        "                       post_process=analysis.steps[-1],\n",
+        "                       name=\"Cluster 0\", file=dcd_location)\n",
+        "s.ensembles.append(e)\n",
+        "s.state_groups[-1][-1].append(mg)\n",
+        "\n",
+        "# Add the model from RMF\n",
+        "rh = RMF.open_rmf_file_read_only('../analysis/cluster.0/cluster_center_model.rmf3')\n",
+        "IMP.rmf.link_hierarchies(rh, [root_hier])\n",
+        "IMP.rmf.load_frame(rh, RMF.FrameID(0))\n",
+        "del rh\n",
+        "m = po.add_model(e.model_group)\n",
+        "\n",
+        "em, = [r for r in s.restraints if isinstance(r, ihm.restraint.EM3DRestraint)]\n",
+        "em.fits[m] = ihm.restraint.EM3DRestraintFit(cross_correlation_coefficient=None)\n",
+        "\n",
+        "for comp in ('C31', 'C34', 'C82'):\n",
+        "    asym = po.asym_units['%s.0' % comp]\n",
+        "    loc = ihm.location.OutputFileLocation('../analysis/cluster.0/LPD_%s.mrc' % comp)\n",
+        "    den = ihm.model.LocalizationDensity(file=loc, asym_unit=asym)\n",
+        "    e.densities.append(den)"
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
