Add all analysis steps to deposition script

--- a/rnapoliii/deposition/.template.Deposition.ipynb
+++ b/rnapoliii/deposition/.template.Deposition.ipynb
@@ -133,7 +133,7 @@
     "output_prefix=\"\"\n",
     "step=int(1)\n",
     "\n",
-    "datadirectory = \"data/\"\n",
+    "datadirectory = \"../data/\"\n",
     "topology_file = datadirectory+\"topology_poliii.cryoem.txt\"\n",
     "target_gmm_file=datadirectory+'%d_imp.gmm'%(step)\n",
     "output_dir='.'\n",
@@ -586,6 +586,51 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Get models from analysis pipeline (largest cluster)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "\n",
+    "def get_cluster_members(analysis_dir, cluster_num):\n",
+    "    \"\"\"Get filenames of RMF files in the given cluster\"\"\"\n",
+    "    num_models = 0\n",
+    "    for sample in ('A', 'B'):\n",
+    "        file_for_id = {}\n",
+    "        with open(os.path.join(analysis_dir,\n",
+    "                               'Identities_%s.txt' % sample)) as fh:\n",
+    "            for line in fh:\n",
+    "                filename, model_id = line.rstrip('\\r\\n').split()\n",
+    "                file_for_id[model_id] = filename\n",
+    "        with open(os.path.join(analysis_dir,\n",
+    "                               'cluster.%d.sample_%s.txt' % (cluster_num, sample))) as fh:\n",
+    "            for line in fh:\n",
+    "                model_id = line.rstrip('\\r\\n')\n",
+    "                num_models += 1\n",
+    "                yield os.path.join(analysis_dir, file_for_id[model_id])\n",
+    "                # In the interests of speed and space, let's just get\n",
+    "                # 10 models from each sample\n",
+    "                if num_models % 10 == 0:\n",
+    "                    break\n",
+    "all_cluster_0_models = list(get_cluster_members('../analysis', 0))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Add basic clustering information to the modeling protocol:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -600,56 +645,129 @@
     "protocol.analyses.append(analysis)\n",
     "analysis.steps.append(ihm.analysis.ClusterStep(\n",
     "                      feature='RMSD', num_models_begin=200000,\n",
-    "                      num_models_end=100))\n",
-    "\n",
+    "                      num_models_end=len(all_cluster_0_models)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Make a group of models, add state"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "mg = ihm.model.ModelGroup(name=\"Cluster 0\")\n",
-    "\n",
+    "s.state_groups[-1][-1].append(mg)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Make DCD of all cluster members"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Make DCD of all models in cluster\n",
     "dcd_filename = '../analysis/cluster.0/allmodels.dcd'\n",
     "num_models = 0\n",
     "with open(dcd_filename, 'wb') as dcd_fh:\n",
     "    dcd = ihm.model.DCDWriter(dcd_fh)\n",
-    "    for sample in ('A', 'B'):\n",
-    "        file_for_id = {}\n",
-    "        with open('../analysis/Identities_%s.txt' % sample) as fh:\n",
-    "            for line in fh:\n",
-    "                filename, model_id = line.rstrip('\\r\\n').split()\n",
-    "                file_for_id[model_id] = filename\n",
-    "        with open('../analysis/cluster.0.sample_%s.txt' % sample) as fh:\n",
-    "            for line in fh:\n",
-    "                model_id = line.rstrip('\\r\\n')\n",
-    "                if num_models % 10 == 0:\n",
-    "                    print(\"Convert RMF %d to DCD\" % num_models)\n",
-    "                num_models += 1\n",
-    "                rh = RMF.open_rmf_file_read_only(\n",
-    "                    '../analysis/%s' % file_for_id[model_id])\n",
-    "                IMP.rmf.link_hierarchies(rh, [root_hier])\n",
-    "                IMP.rmf.load_frame(rh, RMF.FrameID(0))\n",
-    "                del rh\n",
-    "                m = po.add_model(mg)\n",
-    "                dcd.add_model(m)\n",
-    "                del mg[-1]\n",
+    "    for model_file in all_cluster_0_models:\n",
+    "        rh = RMF.open_rmf_file_read_only(model_file)\n",
+    "        IMP.rmf.link_hierarchies(rh, [root_hier])\n",
+    "        IMP.rmf.load_frame(rh, RMF.FrameID(0))\n",
+    "        del rh\n",
+    "        m = po.add_model(mg)\n",
+    "        dcd.add_model(m)\n",
+    "        del mg[-1]\n",
     "\n",
     "dcd_location = ihm.location.OutputFileLocation(\n",
     "    path=dcd_filename,\n",
-    "    details=\"Coordinates of all structures in the largest cluster\")\n",
-    "\n",
-    "e = ihm.model.Ensemble(model_group=mg, num_models=num_models,\n",
+    "    details=\"Coordinates of all structures in the largest cluster\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Add information on the ensemble"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "e = ihm.model.Ensemble(model_group=mg,\n",
+    "                       num_models=len(all_cluster_0_models),\n",
     "                       post_process=analysis.steps[-1],\n",
     "                       name=\"Cluster 0\", file=dcd_location)\n",
-    "s.ensembles.append(e)\n",
-    "s.state_groups[-1][-1].append(mg)\n",
-    "\n",
-    "# Add the model from RMF\n",
+    "s.ensembles.append(e)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Finally add coordinates to the file"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Add the cluster center model from RMF\n",
     "rh = RMF.open_rmf_file_read_only('../analysis/cluster.0/cluster_center_model.rmf3')\n",
     "IMP.rmf.link_hierarchies(rh, [root_hier])\n",
     "IMP.rmf.load_frame(rh, RMF.FrameID(0))\n",
     "del rh\n",
-    "m = po.add_model(e.model_group)\n",
-    "\n",
+    "m = po.add_model(e.model_group)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Add information on the fit of the model to the restraint"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "em, = [r for r in s.restraints if isinstance(r, ihm.restraint.EM3DRestraint)]\n",
-    "em.fits[m] = ihm.restraint.EM3DRestraintFit(cross_correlation_coefficient=None)\n",
-    "\n",
+    "em.fits[m] = ihm.restraint.EM3DRestraintFit(cross_correlation_coefficient=None)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Add localization densities"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "for comp in ('C31', 'C34', 'C82'):\n",
     "    asym = po.asym_units['%s.0' % comp]\n",
     "    loc = ihm.location.OutputFileLocation('../analysis/cluster.0/LPD_%s.mrc' % comp)\n",
