Add more descriptive text to deposition tutorial

--- a/rnapoliii/deposition/Deposition.ipynb
+++ b/rnapoliii/deposition/Deposition.ipynb
@@ -406,14 +406,13 @@
       "source": [
         "s = po.system\n",
         "\n",
-        "# All subunits\n",
-        "print([a.details for a in s.asym_units])\n",
+        "print(\"all subunits:\",\n",
+        "      [a.details for a in s.asym_units])\n",
         "\n",
-        "# Primary sequence of first subunit\n",
-        "print(\"\".join(r.code for r in s.asym_units[0].entity.sequence))\n",
+        "print(\"first subunit sequence:\",\n",
+        "      \"\".join(r.code for r in s.asym_units[0].entity.sequence))\n",
         "\n",
-        "# Restraints on the system\n",
-        "print(s.restraints)"
+        "print(\"all restraints on the system:\", s.restraints)"
       ]
     },
     {
@@ -438,20 +437,20 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "print([r.dataset for r in s.restraints])"
+        "print(\"restraint datasets:\", [r.dataset for r in s.restraints])"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "The data is not placed directly in the mmCIF file - rather, the file contains links (using the [ihm.location](https://python-ihm.readthedocs.io/en/latest/location.html#module-ihm.location) module). These links can be:\n",
+        "The data are not placed directly in the mmCIF file - rather, the file contains links (using the [ihm.location](https://python-ihm.readthedocs.io/en/latest/location.html#module-ihm.location) module). These links can be:\n",
         "\n",
         " - an identifier in a domain-specific database, such as PDB or EMDB.\n",
         " - a DOI where the files can be obtained.\n",
         " - a path to a file on the local disk.\n",
         "\n",
-        "Database identifiers are preferable because the databases are curated by domain experts and include domain-specific information, and the files are in standard formats. ProtocolOutput will attempt to use these where possible. When a file is used for the modeling which cannot be tracked back to a database, ProtocolOutput will include its path (relative to that of the mmCIF file). For example, in this case the cross-links used are stored in simple CSV files and are linked as such:"
+        "**Database identifiers** are preferable because the databases are curated by domain experts and include domain-specific information, and the files are in standard formats. ProtocolOutput will attempt to use these where possible. When a file is used for the modeling which cannot be tracked back to a database, ProtocolOutput will include its path (relative to that of the mmCIF file). For example, in this case the cross-links used are stored in simple CSV files and are linked as such:"
       ]
     },
     {
@@ -462,16 +461,17 @@
       "source": [
         "# Dataset for XL-MS restraint\n",
         "d = s.restraints[0].dataset\n",
-        "print(d.location.path, d.location.details)"
+        "print(\"XL-MS dataset at:\", d.location.path)\n",
+        "print(\"Details:\", d.location.details)"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "In addition, the Python script itself is linked from the mmCIF file. Such local paths won't be available to end users, so for deposition we need to replace these paths with database IDs or DOIs (see below).\n",
+        "In addition, the Python script itself is linked from the mmCIF file. Such local paths won't be available to end users, so for deposition we need to replace these paths with database IDs or DOIs (more on that later).\n",
         "\n",
-        "Datasets all support a simple hierarchy, where one dataset can be derived from another. In this case the EM restraint uses a locally-available GMM file, but it is derived from a density map which is stored in EMDB. ProtocolOutput is able to read (using the [ihm.metadata module](https://python-ihm.readthedocs.io/en/latest/metadata.html#module-ihm.metadata)) metadata in both the GMM file and `.mrc` file to note this relationship:"
+        "Datasets all support a simple hierarchy, where one dataset can be derived from another. In this case the EM restraint uses a locally-available GMM file, but it is derived from a density map which is stored in EMDB. ProtocolOutput is able to read (using the [ihm.metadata module](https://python-ihm.readthedocs.io/en/latest/metadata.html#module-ihm.metadata)) metadata in both the GMM file and `.mrc` file to automatically determine this relationship:"
       ]
     },
     {
@@ -483,7 +483,7 @@
         "# Dataset for EM restraint\n",
         "d = s.restraints[1].dataset\n",
         "print(\"GMM file at\", d.location.path)\n",
-        "print(\"Derived from EMDB entry\", d.parents[0].location.access_code)"
+        "print(\"is derived from EMDB entry\", d.parents[0].location.access_code)"
       ]
     },
     {
@@ -530,8 +530,7 @@
         "as this label is often the name of the cross-linker. However, in this case it is not (we used the label `XL`).\n",
         "\n",
         "We can correct this by looking up [the publication](https://doi.org/10.1038/nmeth.3838) to determine\n",
-        "that the [DSS](https://en.wikipedia.org/wiki/Disuccinimidyl_suberate) cross-linker was used, and using the python-ihm\n",
-        "API to set the correct [cross-linker type](https://python-ihm.readthedocs.io/en/latest/cross_linkers.html#module-ihm.cross_linkers) for each [cross-linking restraint](https://python-ihm.readthedocs.io/en/latest/restraint.html#ihm.restraint.CrossLinkRestraint) in the [list of all restraints](https://python-ihm.readthedocs.io/en/latest/main.html#ihm.System.restraints):\n"
+        "that the [DSS](https://en.wikipedia.org/wiki/Disuccinimidyl_suberate) cross-linker was used. DSS is a common enough cross-linker that python-ihm already includes a definition for it in the [ihm.cross_linkers](https://python-ihm.readthedocs.io/en/latest/cross_linkers.html#module-ihm.cross_linkers) module (for less common linkers we can create an [ihm.ChemDescriptor](https://python-ihm.readthedocs.io/en/latest/main.html#ihm.ChemDescriptor) object from scratch to describe its chemistry). Then we just set the linker type for each [cross-linking restraint](https://python-ihm.readthedocs.io/en/latest/restraint.html#ihm.restraint.CrossLinkRestraint) in the [list of all restraints](https://python-ihm.readthedocs.io/en/latest/main.html#ihm.System.restraints):\n"
       ]
     },
     {
@@ -542,7 +541,9 @@
       "source": [
         "# Definitions of some common crosslinkers\n",
         "import ihm.cross_linkers\n",
-        "xl, = [r for r in s.restraints if hasattr(r, 'linker')]\n",
+        "\n",
+        "# There should be exactly one XL restraint on the system\n",
+        "xl, = [r for r in s.restraints if isinstance(r, ihm.restraint.CrossLinkRestraint)]\n",
         "xl.linker = ihm.cross_linkers.dss"
       ]
     },
@@ -588,7 +589,11 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "Get models from analysis pipeline (largest cluster)"
+        "## Add model coordinates\n",
+        "\n",
+        "The current mmCIF file contains all of the input data, and notes that Monte Carlo was used to generate frames, but doesn't actually store any coordinates yet! We need to extract this information from clustering or other postprocessing that was done as part of our analysis. PMI's analysis and validation pipeline is still in development so doesn't yet provide this information automatically in the same way that ProtocolOutput does for the modeling step, so for now we add any information about clustering, localization densities, and final models to the file using the python-ihm API.\n",
+        "\n",
+        "First, we write a simple function to get the names of the RMF files that constitute a cluster, by parsing output files from the analysis pipeline, and use it to get all structures for the largest cluster (`cluster.0`):"
       ]
     },
     {
@@ -626,7 +631,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "Add basic clustering information to the modeling protocol:"
+        "Now that we know how many structures are in that cluster, we can add information about the clustering to the modeling protocol. We do this by using classes in the [ihm.analysis](https://python-ihm.readthedocs.io/en/latest/analysis.html#module-ihm.analysis) module:"
       ]
     },
     {
@@ -637,8 +642,7 @@
       "source": [
         "# Get last protocol in the file\n",
         "protocol = s.orphan_protocols[-1]\n",
-        "# State that we filtered the 200000 frames down to one cluster of\n",
-        "# 100 models:\n",
+        "# State that we filtered the 200000 frames down to one cluster:\n",
         "import ihm.analysis\n",
         "analysis = ihm.analysis.Analysis()\n",
         "protocol.analyses.append(analysis)\n",
@@ -651,7 +655,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "Make a group of models, add state"
+        "python-ihm allows for models to be placed into groups ([ihm.model.ModelGroup](https://python-ihm.readthedocs.io/en/latest/model.html#ihm.model.ModelGroup)) so we can make such a group for the cluster. These groups are in turn grouped in an [ihm.model.State](https://python-ihm.readthedocs.io/en/latest/model.html#ihm.model.State), a distinct state of the system (e.g. open/closed form, or reactant/product in a chemical reaction). Finally, states can themselves be grouped into [ihm.model.StateGroup](https://python-ihm.readthedocs.io/en/latest/model.html#ihm.model.StateGroup) objects. All of these groups act like regular Python lists. In this case we have only one state, so we just add our model group to that:"
       ]
     },
     {
@@ -661,6 +665,8 @@
       "outputs": [],
       "source": [
         "mg = ihm.model.ModelGroup(name=\"Cluster 0\")\n",
+        "\n",
+        "# Add to last state\n",
         "s.state_groups[-1][-1].append(mg)"
       ]
     },
@@ -668,7 +674,9 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "Make DCD of all cluster members"
+        "To add a model to the file, we create an [ihm.model.Model](https://python-ihm.readthedocs.io/en/latest/model.html#ihm.model.Model) object, add atoms or coarse-grained objects to it, and then add that to the previously-created [ModelGroup](https://python-ihm.readthedocs.io/en/latest/model.html#ihm.model.ModelGroup). ProtocolOutput provides a convenience function `add_model` which does just that, passing the current IMP structure to python-ihm (we just need to load an IMP structure first, e.g. from an RMF file using [IMP.rmf.load_frame](https://integrativemodeling.org/2.11.1/doc/ref/namespaceIMP_1_1rmf.html#abc15209a0aef0e859c99ce00659ebdfb)).\n",
+        "\n",
+        "mmCIF files allow for storing multiple conformations (like a traditional PDB file for storing an NMR ensemble). However, mmCIF is a text format and is not best suited for storing large numbers of structures. In this case we can store the coordinates in a simpler, binary file and link to it from the mmCIF using the [ihm.location.OutputFileLocation](https://python-ihm.readthedocs.io/en/latest/location.html#ihm.location.OutputFileLocation) class, providing one or more representative structures (such as the cluster centroid) in the mmCIF file itself. [DCD](https://www.ks.uiuc.edu/Research/namd/2.9/ug/node11.html) is one such format that we can (ab)use for this purpose (it is really designed for atomic trajectories). python-ihm provides an [ihm.model.DCDWriter](https://python-ihm.readthedocs.io/en/latest/model.html#ihm.model.DCDWriter) class which, given an [ihm.model.Model](https://python-ihm.readthedocs.io/en/latest/model.html#ihm.model.Model), will output DCD. Combining these, we can generate a DCD file for all models in the largest cluster:"
       ]
     },
     {
@@ -689,6 +697,7 @@
         "        del rh\n",
         "        m = po.add_model(mg)\n",
         "        dcd.add_model(m)\n",
+        "        # We only want the model in DCD, not mmCIF\n",
         "        del mg[-1]\n",
         "\n",
         "dcd_location = ihm.location.OutputFileLocation(\n",
@@ -700,7 +709,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "Add information on the ensemble"
+        "Next, we can describe the cluster using the [ihm.model.Ensemble](https://python-ihm.readthedocs.io/en/latest/model.html#ihm.model.Ensemble) class, noting that it was generated from our clustering, and contains structures stored in the DCD file:"
       ]
     },
     {
@@ -720,7 +729,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "Finally add coordinates to the file"
+        "Finally, we can add coordinates for the cluster centroid to the mmCIF file itself, in a similar fashion."
       ]
     },
     {
@@ -734,14 +743,14 @@
         "IMP.rmf.link_hierarchies(rh, [root_hier])\n",
         "IMP.rmf.load_frame(rh, RMF.FrameID(0))\n",
         "del rh\n",
-        "m = po.add_model(e.model_group)"
+        "m = po.add_model(mg)"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "Add information on the fit of the model to the restraint"
+        "We can also add information about the fit of the model to each of the restraints. Most python-ihm restraint objects contain a `fits` member which is a Python dict with [ihm.model.Model](https://python-ihm.readthedocs.io/en/latest/model.html#ihm.model.Model) objects as keys and some sort of restraint-fit object as values. For example, we can note that the cluster centroid model `m` was fit against the EM map by adding an [ihm.restraint.EM3DRestraintFit](https://python-ihm.readthedocs.io/en/latest/restraint.html#ihm.restraint.EM3DRestraintFit) object. This object allows us to give the cross correlation coefficient (if known, otherwise we can use the Python value `None`). We could also specify the Bayesian nuisances \u03c8 and \u03c3 for our cross-links with [ihm.restraint.CrossLinkFit](https://python-ihm.readthedocs.io/en/latest/restraint.html#ihm.restraint.CrossLinkFit) objects."
       ]
     },
     {
@@ -758,7 +767,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "Add localization densities"
+        "If we have localization densities from the analysis for the cluster, we can add those to the Ensemble as [ihm.model.LocalizationDensity](https://python-ihm.readthedocs.io/en/latest/model.html#ihm.model.LocalizationDensity) objects. These take python-ihm subunits (or subsets of them) as [ihm.AsymUnit](https://python-ihm.readthedocs.io/en/latest/main.html#ihm.AsymUnit) objects. ProtocolOutput provides an `asym_units` member, which is a Python dict, to get python-ihm subunits given PMI component names (such as \"C31.0\"):"
       ]
     },
     {
@@ -778,6 +787,17 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
+        "## Replace local links with DOIs\n",
+        "\n",
+        "Recall from earlier that ProtocolOutput adds local paths for the cross-link CSV files and the Python script itself, which won't be visible to end users (we also added more local paths for localization densities and the DCD file with [ihm.location.OutputFileLocation](https://python-ihm.readthedocs.io/en/latest/location.html#ihm.location.OutputFileLocation) objects). The simplest way to solve this issue is to put some or all of the files in zipfiles and upload them to a service that provides a DOI, such as [Zenodo](https://zenodo.org/) or [FigShare](https://figshare.com/), and then link to that DOI. We can do this by creating an [ihm.location.Repository](https://python-ihm.readthedocs.io/en/latest/location.html#ihm.location.Repository) object for each zipfile, and then using the [ihm.System.update_locations_in_repositories](https://python-ihm.readthedocs.io/en/latest/main.html#ihm.System.update_locations_in_repositories) function to map local paths to files in the zipfile at the DOI:"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# Output\n",
+        "\n",
         "We can then save the entire protocol to an mmCIF file (or to [BinaryCIF](https://github.com/dsehnal/BinaryCIF), if we have the Python [msgpack](https://pypi.org/project/msgpack/) package installed) using the [ihm.dumper.write](https://python-ihm.readthedocs.io/en/latest/dumper.html#ihm.dumper.write) function:"
       ]
     },
@@ -794,6 +814,26 @@
         "#with open('rnapoliii.bcif', 'wb') as fh:\n",
         "#    ihm.dumper.write(fh, [s], format='BCIF')"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# Visualization\n",
+        "\n",
+        "## ChimeraX\n",
+        "\n",
+        "mmCIF files can be viewed in many viewers. However, most viewers do not yet support the integrative modeling extensions, and so may only show the atomic parts of the model (if any). Integrative models can be viewed in [ChimeraX](https://www.rbvi.ucsf.edu/chimerax/) - be sure to use a recent nightly build, and open the file from the ChimeraX command line using the `format ihm` option, e.g. `open rnapoliii.cif format ihm`. (If you also want to see the DCD file, add `ensembles true` to the end of your command line to load it and then use the ChimeraX `coordset` command to manipulate the set of coordinates, e.g. `coordset slider #1.3.2`.)\n",
+        "\n",
+        "[VMD](http://www.ks.uiuc.edu/Research/vmd/) is also reportedly working on support in their forthcoming 1.9.4 release."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": []
     }
   ],
   "metadata": {
